# hancode

./: .gitignore  README.md  main.py  pyproject.toml
src/: main.py  review.py
src/db/: vocab_db.py
src/models/: groq_client.py
src/prompts/: basic_prompt.py  vocab_prompt.py
src/utils/: vocab_extractor.py
