[project]
name = "hancode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "groq>=0.31.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-groq>=0.3.7",
    "openai>=1.99.6",
    "python-dotenv>=1.1.1",
    "sqlite-utils>=3.38",
]
